Fix line height on submit inputs and buttons so that the text is vertically aligned.

--- a/styles-compiled/application.css
+++ b/styles-compiled/application.css
@@ -582,8 +582,8 @@ button {
   height: auto;
   cursor: pointer;
   font-size: 1.4rem;
-  padding: 0.2rem 2rem;
-  line-height: 1.8rem;
+  padding: 0.3rem 2rem;
+  line-height: 1.4rem;
   border-style: solid;
   border-width: 0.1rem;
   -moz-border-radius: 0.6rem;
@@ -622,8 +622,8 @@ button.destructive {
   height: auto;
   cursor: pointer;
   font-size: 1.4rem;
-  padding: 0.2rem 2rem;
-  line-height: 1.8rem;
+  padding: 0.3rem 2rem;
+  line-height: 1.4rem;
   border-style: solid;
   border-width: 0.1rem;
   -moz-border-radius: 0.6rem;
@@ -660,8 +660,8 @@ button[disabled] {
   height: auto;
   cursor: pointer;
   font-size: 1.4rem;
-  padding: 0.2rem 2rem;
-  line-height: 1.8rem;
+  padding: 0.3rem 2rem;
+  line-height: 1.4rem;
   border-style: solid;
   border-width: 0.1rem;
   -moz-border-radius: 0.6rem;
